--- a/styles/NavBar.css
+++ b/styles/NavBar.css
@@ -2,50 +2,72 @@
 nav {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding: 10px 20px;
-  background-color: #f5f5f5;
+  justify-content: center;
   position: relative;
 }
 
-/* User display name */
-nav span {
-  font-size: 16px;
-  font-weight: bold;
-  margin-right: 10px;
-}
-
-/* User profile image */
-nav img {
+nav .app-logo {
   width: 40px;
   height: 40px;
+  position: absolute;
+  margin-left: 0;
+  left: 5%;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* User display name */
+nav .app-name {
+  font-size: 24px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+
+/* User profile image */
+nav .user-profile-pic {
+  width: 40px;
+  height: 40px;
+  margin-left: 0;
+  right: 5%;
   border-radius: 50%;
   cursor: pointer;
+  position: absolute;
 }
 
 /* Dropdown menu */
 .nav-dropdown {
   position: absolute;
-  top: 50px;
-  right: 0;
+  top: 48px;
+  right: 5%;
   background-color: #ffffff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   padding: 10px;
   z-index: 1000;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+nav .dropdown-item {
+  padding: 10px 15px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #272626;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background-color 0.2s ease;
+}
+
+nav .dropdown-item:hover {
+  background-color: #dad8d8e2;
 }
 
 /* Sign Out button */
-.nav-dropdown button {
-  background-color: #f44336;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  padding: 8px 12px;
-  cursor: pointer;
-  font-size: 14px;
+.nav-dropdown .signout {
+  color: #f44336;
 }
 
-.nav-dropdown button:hover {
+.nav-dropdown .signout:hover {
   background-color: #d32f2f;
+  color: #ffffff;
 }
