--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     line-height: 1.5;
+    background-color: #1b1a1a;
 }
 
 * {
@@ -28,12 +29,17 @@ button {
 .nav {
     position: sticky;
     top: 0;
-    /* Stick to the top of the page */
     z-index: 1000;
-    /* Ensure it stays above other elements */
-    background-color: #ffffff;
-    /* Background color */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* Add a subtle shadow */
+    background-color: #202020;
+    box-shadow: 0 4px 4px #ffe600;
     padding: 10px 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom: 2px solid #ffffff;
+}
+
+@media (max-width: 768px) {
+    .nav {
+        padding: 4% 0%;
+    }
 }
