--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,27 @@ button {
     cursor: pointer;
 }
 
+/* scroll-bar */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: #1b1a1a;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #636363; 
+    border-radius: 6px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #ffe600; 
+  }
+
 /* Sticky NavBar */
 .nav {
     position: sticky;
